# ha-porkbun

./: .gitignore  .ruff.toml  AGENTS.md  CHANGELOG.md  README.md  hacs.json  pyproject.toml  renovate.json  requirements_test.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  codeql.yml  dependabot-automerge.yml  lockfile-update.yml  release.yml  validate.yml
custom_components/porkbun/: __init__.py
custom_components/porkbun_ddns/: __init__.py  api.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  icons.json  manifest.json  quality_scale.yaml  repairs.py  sensor.py  strings.json
custom_components/porkbun_ddns/translations/: en.json
scripts/: check.sh
tests/: __init__.py  conftest.py  test_api.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_init.py  test_repairs.py  test_sensor.py  test_snapshot_platform.py
tests/snapshots/: test_snapshot_platform.ambr
