[project]
name = "ha-porkbun"
version = "0.8.1"
description = "Home Assistant integration for Porkbun DDNS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = [
    "custom_components/porkbun_ddns/const.py:__version__",
    "custom_components/porkbun_ddns/manifest.json:version",
]
build_command = ""
commit_message = "chore(release): {version}"
tag_format = "v{version}"

[tool.semantic_release.branches.master]
match = "master"
prerelease = false

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.remote]
type = "github"
token = { env = "GITHUB_TOKEN" }

[tool.mypy]
python_version = "3.13"
plugins = []
follow_imports = "normal"
strict = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "homeassistant.*",
    "pytest_homeassistant_custom_component.*",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]
